# GPU-Reshape

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  License.md  ReadMe.md  ThinX86.cmake  VisualStudio2019.bat  VisualStudio2019_UIX.bat  VisualStudio2022.bat  nuget.config
Source/: CMakeLists.txt
Source/Backends/: CMakeLists.txt
Source/Backends/DX12/: Bootstrapper.cmake  Bootstrapper.def  CMakeLists.txt  DX12.xml
Source/Backends/Vulkan/: CMakeLists.txt  Vulkan.xml
Source/Backends/Vulkan/Tests/: Loader.cpp  Loader.h  UserData.cpp  UserDataLayer.cpp  user_data_layer.json
Source/Features/: CMakeLists.txt
Source/Features/Common/: CMakeLists.txt
Source/Features/Common/Backend/: CMakeLists.txt
Source/Features/Concurrency/: CMakeLists.txt  Concurrency.xml
Source/Features/Concurrency/Backend/: CMakeLists.txt
Source/Features/Concurrency/Frontend/: CMakeLists.txt
Source/Features/Descriptor/: CMakeLists.txt  Descriptor.xml
Source/Features/Descriptor/Backend/: CMakeLists.txt
Source/Features/Descriptor/Frontend/: CMakeLists.txt
Source/Features/ExportIndices/: CMakeLists.txt  ExportIndices.xml
Source/Features/ExportIndices/Backend/: CMakeLists.txt
Source/Features/ExportIndices/Frontend/: CMakeLists.txt
Source/Features/ExportStability/: CMakeLists.txt  ExportStability.xml
Source/Features/ExportStability/Backend/: CMakeLists.txt
Source/Features/ExportStability/Frontend/: CMakeLists.txt
Source/Features/Initialization/: CMakeLists.txt  Initialization.xml
Source/Features/Initialization/Backend/: CMakeLists.txt
Source/Features/Initialization/Frontend/: CMakeLists.txt
Source/Features/Loop/: CMakeLists.txt  Loop.xml
Source/Features/Loop/Backend/: CMakeLists.txt
Source/Features/Loop/Frontend/: CMakeLists.txt
Source/Features/ResourceBounds/: CMakeLists.txt  ResourceBounds.xml
Source/Features/ResourceBounds/Backend/: CMakeLists.txt
Source/Features/ResourceBounds/Frontend/: CMakeLists.txt
Source/Features/ResourceBounds/Schemas/: ResourceBounds.xml
Source/Features/ResourceBounds/Source/: Feature.cpp
Source/Features/Waterfall/: CMakeLists.txt  Waterfall.xml
Source/Features/Waterfall/Backend/: CMakeLists.txt
Source/Features/Waterfall/Frontend/: CMakeLists.txt
Source/Libraries/: CMakeLists.txt
Source/Libraries/Addressing/: CMakeLists.txt
Source/Libraries/Addressing/Tests/: TexelAddressing.cpp
Source/Libraries/Analysis/: CMakeLists.txt
Source/Libraries/Backend/: CMakeLists.txt
Source/Libraries/Backend/DotNet/: CMakeLists.txt
Source/Libraries/Backend/Include/: ShaderExportTypeInfo.h
Source/Libraries/Backend/Schemas/: Config.xml  Diagnostic.xml  Feature.xml  Instrumentation.xml  Object.xml  PDB.xml  Pipeline.xml  PipelineMetadata.xml  SGUID.xml  ShaderMetadata.xml  Versioning.xml
Source/Libraries/Backend/Source/: Backend.cpp  Environment.cpp  FeatureHost.cpp  ShaderSGUIDHostListener.cpp  StartupEnvironment.cpp
Source/Libraries/Bridge/: CMakeLists.txt  DotNet.cmake
Source/Libraries/Bridge/DotNet/: CMakeLists.txt
Source/Libraries/Bridge/Schemas/: HostResolve.xml  PingPong.xml
Source/Libraries/Bridge/Source/: HostServerBridge.cpp  MemoryBridge.cpp  NetworkBridge.cpp  RemoteClientBridge.cpp
Source/Libraries/Common/: CMakeLists.txt
Source/Libraries/Common/Source/: Assert.cpp  CRC.cpp  CrashHandler.cpp  FileSystem.cpp  GlobalUID.cpp  Library.cpp  Path.cpp
Source/Libraries/Discovery/: CMakeLists.txt
Source/Libraries/Discovery/Source/: Discovery.cpp  DiscoveryHost.cpp
Source/Libraries/Frontend/: CMakeLists.txt
Source/Libraries/Message/: CMakeLists.txt  DotNet.cmake
Source/Libraries/Message/DotNet/: CMakeLists.txt
Source/Libraries/Message/Schemas/: Log.xml
Source/Libraries/Message/Source/: Message.cpp  OrderedMessageStream.cpp
Source/Libraries/Transform/: CMakeLists.txt
Source/Services/: CMakeLists.txt
Source/Services/Discovery/: CMakeLists.txt  DotNet.cmake
Source/Services/Discovery/Cleanup/: main.cpp
Source/Services/Discovery/DotNet/: CMakeLists.txt
Source/Services/Discovery/NotifyIcon/: App.axaml  App.axaml.cs  GlobalFileLock.cs  NotifyIcon.csproj  Program.cs  Win32.cs
Source/Services/Discovery/Source/: DiscoveryService.cpp  NotifyIconDiscoveryListener.cpp
Source/Services/Discovery/Standalone/: main.cpp
Source/Services/HostResolver/: CMakeLists.txt  DotNet.cmake
Source/Services/HostResolver/Source/: HostResolverService.cpp
Source/Services/HostResolver/Standalone/: main.cpp
Source/Test/: CMakeLists.txt
Source/Test/Automation/: CMakeLists.txt
Source/Test/Automation/Data/: Engines.json  Games.json  Samples.json
Source/Test/Automation/Runner/: main.cpp
Source/Test/Automation/Source/: Parser.cpp  TestContainer.cpp
Source/Test/Device/: CMakeLists.txt
Source/Test/Device/Source/: ShaderHost.cpp  main.cpp
Source/Test/Unified/: CMakeLists.txt
Source/Test/Unified/Source/: main.cpp
Source/UIX/: CMakeLists.txt  UIX.sln
Source/UIX/Runtime/: DestructibleReactiveObject.cs  Runtime.csproj  TextFormatter.cs
Source/UIX/Runtime/Extensions/: Dictionary.cs  Factory.cs  FactoryEvents.cs  Formatting.cs  Linq.cs  Reactive.cs  ReactiveObject.cs  Signal.cs  Visual.cs
Source/UIX/Runtime/Plugin/: IPlugin.cs  PluginEntry.cs  PluginInfo.cs  PluginList.cs  PluginMode.cs  PluginResolveFlag.cs  PluginResolver.cs  PluginState.cs
Source/UIX/Runtime/Resources/: Resources.Designer.cs  Resources.resx
Source/UIX/Runtime/Services/: IBackendDiscoveryService.cs  IContextMenuService.cs  IHostResolverService.cs  ILocatorService.cs  ILoggingService.cs  IMenuService.cs  IServiceRegistry.cs  ISettingsService.cs  IStatusService.cs  ISuspensionService.cs  IWindowService.cs  IWorkspaceService.cs
Source/UIX/Runtime/Threading/: CollectionMergePumpBus.cs  GlobalBus.cs  GlobalPumpBus.cs  GlobalTimedBus.cs  MergePumpBus.cs  PumpedList.cs  ValidationMergePumpBus.cs
Source/UIX/Runtime/Utils/: EnumUtils.cs  ProcessWin32.cs
Source/UIX/Studio/: App.axaml  App.axaml.cs  Icons.axaml  Logging.cs  Program.cs  ResourceLocator.cs  Studio.csproj  ViewLocator.cs
Source/UIX/Studio/Extensions/: Signal.cs
(+1991 files in other folders)
